# iai_office_sim

./: CMakeLists.txt  package.xml
launch/: turtlebot3.launch.py
resource/Media/materials/scripts/: iai-office.material
rviz/: tb3_gazebo.rviz
worlds/: office_sim_WS15.world
