<?xml version="1.0"?>

<package format="3">
  <name>iai_office_sim</name>
  <version>0.0.0</version>
  <description>This RosPackage contains CAD models for iai_office simulation. These models can be used for visualization and reasoning in different packages. The directory structure is meant to work with gazebo/openEASE(knowrob_vis) and CRAM-Physics
</description>
  <maintainer email="bbrieber@cs.informatik.uni-bremen.de">Benjamin Brieber</maintainer>
  <author email="bbrieber@cs.informatik.uni-bremen.de">Benjamin Brieber</author>

  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros 
		plugin_path="${prefix}/lib" 
        gazebo_plugin_path="${prefix}/lib:../${prefix}/lib" 
        gazebo_media_path="${prefix}/resource" 
        gazebo_resource_path="${prefix}:${prefix}/resource" 
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
